// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customDashboard card tests renders card - with html 1`] = `
<div>
  <article
    class="pf-c-card pf-m-selectable"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    data-testid="card"
    id=""
    tabindex="0"
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class=""
      >
        Empty
      </div>
    </div>
    <div
      class="pf-c-card__header"
    >
      <h1
        class="pf-u-font-weight-bold"
        data-ouia-component-id="OUIA-Generated-Text-4"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        dashboard2
      </h1>
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-u-mt-md"
      >
        <form
          class="pf-c-form"
          novalidate=""
        >
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="path"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Path
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-5"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                /user/home
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="lastModified"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  LastModified
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-6"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1657564200000"
                >
                  in 5 years
                </time>
              </p>
              
            </div>
          </div>
        </form>
      </div>
    </div>
  </article>
</div>
`;

exports[`customDashboard card tests renders card - with tsx 1`] = `
<div>
  <article
    class="pf-c-card pf-m-selectable"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    data-testid="card"
    id=""
    tabindex="0"
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class=""
      >
        Empty
      </div>
    </div>
    <div
      class="pf-c-card__header"
    >
      <h1
        class="pf-u-font-weight-bold"
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        dashboard1
      </h1>
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-u-mt-md"
      >
        <form
          class="pf-c-form"
          novalidate=""
        >
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="path"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  Path
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-2"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                /user/home
              </p>
              
            </div>
          </div>
          <div
            class="pf-c-form__group"
          >
            <div
              class="pf-c-form__group-label"
            >
              <label
                class="pf-c-form__label"
                for="lastModified"
              >
                <span
                  class="pf-c-form__label-text"
                >
                  LastModified
                </span>
              </label>
               
            </div>
            <div
              class="pf-c-form__group-control"
            >
              <p
                class=""
                data-ouia-component-id="OUIA-Generated-Text-3"
                data-ouia-component-type="PF4/Text"
                data-ouia-safe="true"
                data-pf-content="true"
              >
                <time
                  datetime="1657564200000"
                >
                  in 5 years
                </time>
              </p>
              
            </div>
          </div>
        </form>
      </div>
    </div>
  </article>
</div>
`;
